fix layout responsive

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
   </head>
 
     <body>
-        <div ui-view layout-fill></div>
+        <div ui-view layout-fill layout="row"></div>
     </body>
 </html>
